docs for update()
